<resources>
    <string name="app_name">FreshNew</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_my_test">MyTest</string>

    <string name="personal_default_login">请先登录</string>
    <string name="hint_enter_username">请输入手机号码</string>
    <string name="hint_enter_password">请输入密码</string>
    <string name="hint_enter_nickname">请输入昵称(可选)</string>
    <string name="button_sina_login">微博</string>
    <string name="button_wechat_login">微信</string>
    <string name="button_qq_login">QQ</string>
    <string name="button_register">注册</string>
    <string name="card_login">账号登录</string>
    <string name="card_register">注册新账号</string>
    <string name="title_cancel">取消</string>
    <string name="title_login">登录</string>
    <string name="title_register">创建账号</string>
    <string name="title_activity_home">HomeActivity</string>

    <!-- tab title -->
    <string name="tab_home">首页</string>
    <string name="tab_search">搜索</string>
    <string name="tab_add">创建新消息</string>
    <string name="tab_contact">联系人</string>
    <string name="tab_personal">个人中心</string>
    <string name="tab_manager">管理</string>
    <string name="tab_more">更多</string>
    <string name="tab_blank">欢迎</string>

</resources>
