<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@mipmap/land_page_bg"
    android:padding="@dimen/dip_20"
    android:gravity="bottom">

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_selector"
        android:text="@string/card_login"
        android:id="@+id/btn_login" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dip_10"
        android:layout_marginBottom="@dimen/dip_10">

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/button_sina_login"
            android:background="@drawable/button_selector"
            android:textSize="20sp"
            android:id="@+id/btn_sina_login" />

        <View
            android:layout_width="@dimen/dip_10"
            android:layout_height="1dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/button_wechat_login"
            android:background="@drawable/button_selector"
            android:textSize="20sp"
            android:id="@+id/btn_wechat_login" />

        <View
            android:layout_width="@dimen/dip_10"
            android:layout_height="1dp" />

        <Button
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:text="@string/button_qq_login"
            android:background="@drawable/button_selector"
            android:textSize="20sp"
            android:id="@+id/btn_qq_login" />


    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:background="@drawable/button_selector"
        android:text="@string/card_register"/>

</LinearLayout>
