<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/title_cancel"
            android:paddingLeft="@dimen/dip_20"
            android:paddingRight="@dimen/dip_20"
            android:gravity="center"/>
        
        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_selector"
        android:layout_marginTop="@dimen/dip_20"
        android:singleLine="true"
        android:ellipsize="end"
        android:hint="@string/hint_enter_username"
        android:id="@+id/et_username" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_username"
        android:layout_marginTop="@dimen/dip_20"
        android:inputType="textPassword"
        android:background="@drawable/edittext_selector"
        android:singleLine="true"
        android:ellipsize="end"
        android:hint="@string/hint_enter_password"
        android:id="@+id/et_password" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/et_password"
        android:layout_marginTop="@dimen/dip_20"
        android:background="@drawable/button_selector"
        android:textSize="20sp"
        android:id="@+id/btn_click" />

</LinearLayout>
